services/demand-forecast-serving/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "demand-forecast-serving-service"
  labels:
    app: "demand-forecast-serving"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: "demand-forecast-serving"
